Bug 367575 - kio_http_cache_cleaner process persists after logout
Summary: kio_http_cache_cleaner process persists after logout
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: HTTP (other bugs)
Version First Reported In: 5.48.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-19 15:41 UTC by Tristan Miller
Modified: 2019-01-07 20:54 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.54
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tristan Miller 2016-08-19 15:41:35 UTC
Whenever I log out of KDE, I continue to see a kio_http_cache_cleaner process running.

Reproducible: Always

Steps to Reproduce:
1. Log into KDE.
2. Log out of KDE.
3. Log in as root and do ps -u myusername

Actual Results:  
3. ps shows an instance of kio_http_cache_cleaner running.

Expected Results:  
3. kio_http_cache_cleaner should not be running
Comment 1 Johannes Hirte 2017-02-10 18:04:39 UTC
For every login into KDE Plasma, there is one more kio_http_cache_cleaner process started and left over after logout.
Comment 2 Martin Koller 2019-01-07 20:54:02 UTC
Git commit a3fce6e0b7f22c67ac8e8d8ef838ac4e67205653 by Martin Koller.
Committed on 07/01/2019 at 20:51.
Pushed by mkoller into branch 'master'.

avoid blocking kio_http_cache_cleaner and ensure exit with session

Differential Revision: https://phabricator.kde.org/D17741
FIXED-IN: 5.54

M  +18   -18   src/ioslaves/http/http_cache_cleaner.cpp

https://commits.kde.org/kio/a3fce6e0b7f22c67ac8e8d8ef838ac4e67205653