avoid blocking kio_http_cache_cleaner and ensure exit with session

Differential Revision: https://phabricator.kde.org/D17741
BUG: 367575
FIXED-IN: 5.54